# Game-of-Life-v.2

./: .gitignore  CMakeLists.txt  README.md  a.out  field.cpp  field.h  fieldmanager.cpp  fieldmanager.h  main.cpp  renderer.cpp  renderer.h
tests/: fieldmanagertest.h  fieldtest.h
